Code adjustments due to some deprecated methods in Java 20